Update JSONObject.java
add support for record